Fixing scss issues, departed trains are now hidden by default.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,20 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "./*";
 
 body {
   #footer {
     font-size: 6pt;
     color: #777;
-  }
-  #trains {
-    .limited {
-      background-color: #ddb474
-    }
-    .local {
-      background-color: #EEEEEE
-    }
-    .bullet {
-      background-color: darkred;
-    }
   }
 }
