--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the schedules controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#trains {
+  .limited {
+    background-color: #ddb474
+  }
+  .local {
+    background-color: #EEEEEE
+  }
+  .bullet {
+    background-color: darkred;
+  }
+  .departed {
+    display: none;
+  }
+}
